tests/negative/typecheck/immutable_dereference.orng
// immutable_dereference.orng:7:14: error: cannot modify non-mutable address
//     let y = &x
//             ^
// 
fn main() -> Int {
    let x = 0
    let y = &x
    y^ = 4
    0
}